# ChangeLog for media-libs/freealut
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/freealut/ChangeLog,v 1.25 2009/03/11 20:29:46 tupone Exp $

  11 Mar 2009; Tupone Alfredo <tupone@gentoo.org> freealut-1.0.1.ebuild,
  freealut-1.1.0.ebuild:
  Adding DEPEND

  07 Jan 2009; Guy Martin <gmsoft@gentoo.org> freealut-1.1.0.ebuild:
  hppa stable

  28 Jul 2008; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml:
  Removing myself from metadata.xml since I am retiring from the project.

  23 Jul 2007; Raúl Porcel <armin76@gentoo.org> freealut-1.1.0.ebuild:
  ia64 stable wrt #181059

  26 Jun 2007; Lars Weiler <pylon@gentoo.org> freealut-1.1.0.ebuild:
  Stable on ppc; bug #181059.

  22 Jun 2007; Raúl Porcel <armin76@gentoo.org> freealut-1.1.0.ebuild:
  alpha stable and readd ~ia64 wrt #181059

  20 Jun 2007; Markus Rothe <corsair@gentoo.org> freealut-1.1.0.ebuild:
  Stable on ppc64; bug #181059

  19 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> freealut-1.1.0.ebuild:
  Stable on sparc wrt #181059

  19 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org> freealut-1.1.0.ebuild:
  Stable on amd64/x86 wrt bug #181059.

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> freealut-1.0.1.ebuild,
  freealut-1.1.0.ebuild:
  Remove gnuconfig inherit.

  06 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org> freealut-1.0.1.ebuild,
  freealut-1.1.0.ebuild:
  Removing specific version of openal since the older CVS snapshot versions
  have been removed from the tree for some time now.

  26 Oct 2006; Roy Marples <uberlord@gentoo.org> freealut-1.1.0.ebuild:
  Added x86-fbsd keyword.

  26 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> freealut-1.1.0.ebuild:
  Added patch from Roy Marples <uberlord@gentoo.org> to fix freealut compiling
  on Gentoo/FreeBSD and closing bug #151224.

  02 Aug 2006; Thomas Cort <tcort@gentoo.org> freealut-1.0.1.ebuild:
  Stable on alpha wrt Bug #133501.
